# simple-library-template

./: CMakeLists.txt  README.md
include/simplelib/: simplelib.h
src/: CMakeLists.txt  simplelib.cpp
tests/: CMakeLists.txt  test_simplelib.cpp
